AngularJwtAuth/src/app/aanmeldformulier/presentationdraftForm/aanmeldformulier.component.css
.warning{
  color: red;
}

div{
  align-content: center;
  margin-left: 0px;
}

.example-container {
  display: flex;
  flex-direction: column;
}

.example-container > * {
  width: 100%;
}

.mat-form-field{
  width: 100%;
  margin-right: 5%;
}

#mat-form-type, #mat-form-occupation, #mat-form-category, #mat-form-duration{
  width: 20%;
  flex: 10%;
}

#mat-form-requests{
  width: 45%;
  margin-right: 5%;
}

.mat-form-field-wrapper, .mat-form-field-appearance-legacy, .mat-form-field-wrapper{
  padding-bottom: 0em;
}

p{
  margin-block-start: 0em;
  margin-block-end: 0em;
}

div.example-button-row{
  width: 20%;
}

mat-table{
  width: 45%;
}

tr:hover {
  background: #f5f5f5;
  cursor: pointer;
}

tr:active {
  background: #efefef;
}

.tdHeaderText{
  color: hsl(256, 71%, 14%);
  font-weight: bold;
}

#mat-form-addCohostTable{
  width: 45%;
  margin-left: 5%;
}

input, textarea{
  cursor: pointer;
}

